# seletive

./: README.md  manage.py  pyproject.toml
.github/workflows/: pyapp.yml
docs/PyLab2022/: Aula1.md  Aula2.md  Aula3.md
srcprg/: asgi.py  settings.py  urls.py  wsgi.py
srcprg/empresa/: admin.py  apps.py  models.py  urls.py  views.py
srcprg/empresa/migrations/: 0001_initial.py  0002_alter_vagas_empresa.py  0003_vagas_email.py
srcprg/empresa/templates/: empresa.html  empresa_unica.html  nova_empresa.html
srcprg/empresa/templatetags/: filtro.py
srcprg/empresa/tests/: test_ok.py
srcprg/templates/: base.html
srcprg/templates/static/base/css/: base.css
srcprg/templates/static/empresa/css/: empresa.css
srcprg/vagas/: apps.py  urls.py  views.py
